# runic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: METHOD.md
experiments/: attack_budget_sweep.py  reproduce_kirchenbauer.py
src/runic/: __init__.py
src/runic/attacks/: __init__.py  span_replacement.py
src/runic/cli/: __init__.py  main.py
src/runic/core/: __init__.py  config.py  statistics.py  vocab_partition.py
src/runic/detection/: __init__.py  brute_force.py  detector.py
src/runic/generation/: __init__.py  generator.py  processor.py
src/runic/utils/: plotting.py
tests/: test_brute_force.py  test_config.py  test_detector.py  test_processor.py  test_statistics.py  test_vocab_partition.py
