[project]
name = "runic"
version = "0.1.0"
description = "Statistical watermarking for large language models (Kirchenbauer et al. 2023)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bartlomiej Dmitruk", email = "bartlomiej.dmitruk@isec.pl" }]
keywords = ["llm", "watermark", "provenance", "steganography", "detection"]

dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "numpy>=1.26",
    "scipy>=1.12",
    "typer>=0.12",
    "loguru>=0.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
attacks = [
    "sentencepiece>=0.2",
]

[project.scripts]
runic = "runic.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runic"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "experiments"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "PL", "PT"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PLC0415"]
"experiments/*" = ["T201"]
"src/runic/cli/*" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true
files = ["src/runic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
